плюс последовательность Фибоначчи и арифметическая прогрессия

--- a/parser.ipynb
+++ b/parser.ipynb
@@ -21262,6 +21262,124 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generated Passwords:\n",
+      "0112358132134558914423337761098715972584418167651094617711286574\n",
+      "6368750251213931964183178115142298320401346269217830935245785702\n",
+      "8879227465149303522415781739088169\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fibonacci_recursive(n):\n",
+    "    if n <= 0:\n",
+    "        return 0\n",
+    "    elif n == 1:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return fibonacci_recursive(n-1) + fibonacci_recursive(n-2)\n",
+    "\n",
+    "def generate_fibonacci_sequence(n):\n",
+    "    array = []\n",
+    "    for i in range(n + 1):\n",
+    "        array.append(fibonacci_recursive(i))\n",
+    "    return array\n",
+    "\n",
+    "def generate_passwords_with_fibonacci(max_length=64):\n",
+    "    # Генерация первой 20 последовательности Фибоначчи, этого достаточно для генерации паролей\n",
+    "    fibonacci_sequence = generate_fibonacci_sequence(38)\n",
+    "    \n",
+    "    # Преобразуем числа Фибоначчи в строку\n",
+    "    fib_string = ''.join(str(num) for num in fibonacci_sequence)\n",
+    "    \n",
+    "    # Генерация паролей, каждый длиной до max_length символов\n",
+    "    passwords = []\n",
+    "    while len(fib_string) > 0:\n",
+    "        password = fib_string[:max_length]\n",
+    "        passwords.append(password)\n",
+    "        fib_string = fib_string[max_length:]\n",
+    "    \n",
+    "    return passwords\n",
+    "\n",
+    "# Пример использования\n",
+    "passwords = generate_passwords_with_fibonacci()\n",
+    "\n",
+    "# Выводим пароли\n",
+    "print(\"Generated Passwords:\")\n",
+    "for password in passwords:\n",
+    "    print(password)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generated Passwords:\n",
+      "0112358132134558914423337761098715972584418167651094617711286574\n",
+      "6368750251213931964183178115142298320401346269217830935245785702\n",
+      "8879227465149303522415781739088169632459861023341551655801412679\n",
+      "1429643349443770140873311349031701836311903297121507348075269767\n",
+      "7787420491258626902520365011074329512800995331629117386267571272\n",
+      "1395838624452258514337173654352961625912867298799567220260411548\n",
+      "0087559202504730781961405273953788165574703198421061020985772317\n",
+      "1676801775652777789003528844945570212853727234602481411176690304\n",
+      "6099419039249070913530806152117012949845401187926480651553304939\n",
+      "3130496954492865721114850779780503416454622906707552793970088475\n",
+      "7894439432379146414472334024676221234167283484676853788906237314\n",
+      "3906613057907216115919919485309475549716050064381636708825969549\n",
+      "6911122585420196140727489673679891637638612258110008777836610193\n",
+      "1177997941600471418928800671943708161204660046610375530309754011\n",
+      "3804746346429122001604151218767381974027421986822316731940434634\n",
+      "9900999055168070885485832307283621143489848422977135301852344706\n",
+      "746049218922995834555169026354224848179261915075\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fibonacci_iterative(n):\n",
+    "    if n <= 0:\n",
+    "        return 0\n",
+    "    elif n == 1:\n",
+    "        return 1\n",
+    "    fib_sequence = [0, 1]\n",
+    "    for i in range(2, n + 1):\n",
+    "        fib_sequence.append(fib_sequence[-1] + fib_sequence[-2])\n",
+    "    return fib_sequence\n",
+    "\n",
+    "def generate_passwords_with_fibonacci(max_length=64):\n",
+    "    # Генерация последовательности Фибоначчи до 38-го элемента\n",
+    "    fibonacci_sequence = fibonacci_iterative(1000)\n",
+    "    \n",
+    "    # Преобразуем числа Фибоначчи в строку\n",
+    "    fib_string = ''.join(str(num) for num in fibonacci_sequence)\n",
+    "    \n",
+    "    # Генерация паролей, каждый длиной до max_length символов\n",
+    "    passwords = [fib_string[i:i + max_length] for i in range(0, len(fib_string), max_length)]\n",
+    "    \n",
+    "    return passwords\n",
+    "\n",
+    "# Пример использования\n",
+    "passwords = generate_passwords_with_fibonacci()\n",
+    "\n",
+    "# Выводим пароли\n",
+    "print(\"Generated Passwords:\")\n",
+    "for idx, password in enumerate(passwords, start=1):\n",
+    "    print(f'Password {idx}: {password}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
