--- a/parser.ipynb
+++ b/parser.ipynb
@@ -27508,7 +27508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27518,24 +27518,161 @@
     "def generate_passwords_with_geometric_progression(number_passw, max_length=64):\n",
     "    start = 2\n",
     "    ratio = 3\n",
-    "    count = 500\n",
+    "    count = 600\n",
     "    sequence = generate_sequence(start, ratio, count)\n",
     "    sequence_string = ''.join(str(num) for num in sequence)\n",
     "    passwords = [sequence_string[i:i + max_length] for i in range(0, len(sequence_string), max_length)]\n",
     "    passwords = passwords[:number_passw]\n",
     "            \n",
     "    with open('geometric_progression_passwords.txt', 'w') as file:\n",
+    "        file.write('Каждый новый пароль - это 64 символа геометричекой прогрессии, '\n",
+    "            'причем начало 2, знаменатель прогрессии 3, степень определяется от 1 с шагом 1:\\n')\n",
+    "\n",
     "        for idx, password in enumerate(passwords, start=1):\n",
-    "            file.write(f\"Password {idx}: {password}\\n\")"
+    "            file.write(f\"Password with geometric progression {idx}: {password}\\n\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "generate_passwords_with_geometric_progression(100)"
+    "generate_passwords_with_geometric_progression(1000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>constant</th>\n",
+       "      <th>value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Квадратный корень 1</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Квадратный корень 2</td>\n",
+       "      <td>1.4142135623730951</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Квадратный корень 3</td>\n",
+       "      <td>1.7320508075688772</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Квадратный корень 4</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Квадратный корень 5</td>\n",
+       "      <td>2.23606797749979</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7126</th>\n",
+       "      <td>Password with numbers catalan 996</td>\n",
+       "      <td>063663955173243839272715304787109792999899264...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7127</th>\n",
+       "      <td>Password with numbers catalan 997</td>\n",
+       "      <td>762733786707912709029470731402545171899073642...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7128</th>\n",
+       "      <td>Password with numbers catalan 998</td>\n",
+       "      <td>992826479012760166019201359223246844207349613...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7129</th>\n",
+       "      <td>Password with numbers catalan 999</td>\n",
+       "      <td>029678445310276792852315164274332659785561594...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7130</th>\n",
+       "      <td>Password with numbers catalan 1000</td>\n",
+       "      <td>977734044760403424017298805748463768798128042...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>7131 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                constant  \\\n",
+       "0                    Квадратный корень 1   \n",
+       "1                    Квадратный корень 2   \n",
+       "2                    Квадратный корень 3   \n",
+       "3                    Квадратный корень 4   \n",
+       "4                    Квадратный корень 5   \n",
+       "...                                  ...   \n",
+       "7126   Password with numbers catalan 996   \n",
+       "7127   Password with numbers catalan 997   \n",
+       "7128   Password with numbers catalan 998   \n",
+       "7129   Password with numbers catalan 999   \n",
+       "7130  Password with numbers catalan 1000   \n",
+       "\n",
+       "                                                  value  \n",
+       "0                                                   1.0  \n",
+       "1                                    1.4142135623730951  \n",
+       "2                                    1.7320508075688772  \n",
+       "3                                                   2.0  \n",
+       "4                                      2.23606797749979  \n",
+       "...                                                 ...  \n",
+       "7126   063663955173243839272715304787109792999899264...  \n",
+       "7127   762733786707912709029470731402545171899073642...  \n",
+       "7128   992826479012760166019201359223246844207349613...  \n",
+       "7129   029678445310276792852315164274332659785561594...  \n",
+       "7130   977734044760403424017298805748463768798128042...  \n",
+       "\n",
+       "[7131 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "columns = ['constant', 'value']\n",
+    "pd.read_csv('dictionary.txt', names=columns, header=None)\n",
+    "# with open('dictionary.txt') as file:\n",
+    "    "
    ]
   },
   {
