--- a/parser.ipynb
+++ b/parser.ipynb
@@ -27677,6 +27677,241 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.19634954084936207"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import math\n",
+    "math.pi / 16"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "import openpyxl\n",
+    "\n",
+    "bradis_table = {}\n",
+    "for angle in range(0, 91):  # Углы от 0 до 90 градусов\n",
+    "    rad = math.radians(angle)\n",
+    "    bradis_table[angle] = {\n",
+    "        'sin': round(math.sin(rad), 8),\n",
+    "        'cos': round(math.cos(rad), 8),\n",
+    "        'tan': round(math.tan(rad), 8) if angle != 90 else 'inf',  # tan 90° -> бесконечность\n",
+    "        'cot': round(1 / math.tan(rad), 8) if angle != 0 else 'inf'  # cot 0° -> бесконечность\n",
+    "    }\n",
+    "\n",
+    "# Создание новой книги и активного листа\n",
+    "wb = openpyxl.Workbook()\n",
+    "ws = wb.active\n",
+    "\n",
+    "# Назначение заголовков столбцов\n",
+    "ws.append([\"Угол (градусы)\", \"sin\", \"cos\", \"tan\", \"cot\"])\n",
+    "\n",
+    "# Заполнение данными из словаря bradis_table\n",
+    "for angle, values in bradis_table.items():\n",
+    "    ws.append([angle, values['sin'], values['cos'], values['tan'], values['cot']])\n",
+    "\n",
+    "# Сохранение файла\n",
+    "file_path = \"bradis_table.xlsx\"\n",
+    "wb.save(file_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Название константы</th>\n",
+       "      <th>Значение</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Постоянная Авогадро</td>\n",
+       "      <td>602214076000000000000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Скорость света в вакууме</td>\n",
+       "      <td>299792458</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Постоянная Планка</td>\n",
+       "      <td>6.626e-34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Элементарный заряд</td>\n",
+       "      <td>1.60217662e-19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Масса электрона</td>\n",
+       "      <td>9.109e-31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>71</th>\n",
+       "      <td>Плотность обычного стекла</td>\n",
+       "      <td>2500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>72</th>\n",
+       "      <td>Плотность стекла (пирекс)</td>\n",
+       "      <td>2230</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>73</th>\n",
+       "      <td>Плотность мыла</td>\n",
+       "      <td>900</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>74</th>\n",
+       "      <td>Плотность воздуха</td>\n",
+       "      <td>1.225</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75</th>\n",
+       "      <td>Плотность фосфора</td>\n",
+       "      <td>1823</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>76 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Название константы                  Значение\n",
+       "0         Постоянная Авогадро  602214076000000000000000\n",
+       "1    Скорость света в вакууме                 299792458\n",
+       "2           Постоянная Планка                 6.626e-34\n",
+       "3          Элементарный заряд            1.60217662e-19\n",
+       "4             Масса электрона                 9.109e-31\n",
+       "..                        ...                       ...\n",
+       "71  Плотность обычного стекла                      2500\n",
+       "72  Плотность стекла (пирекс)                      2230\n",
+       "73             Плотность мыла                       900\n",
+       "74          Плотность воздуха                     1.225\n",
+       "75          Плотность фосфора                      1823\n",
+       "\n",
+       "[76 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "pd.read_csv('chemical_const_passwords.csv', sep=';')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "86"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len('0.000000000066742999999999993790012436692643364721799770222787628881633281707763671875')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.71828182845904523536028747135266249775724709369995957496696763\n"
+     ]
+    }
+   ],
+   "source": [
+    "import mpmath\n",
+    "\n",
+    "mpmath.mp.dps = 63  # Устанавливаем количество цифр после запятой\n",
+    "e_value = mpmath.e\n",
+    "print(e_value)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "64"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len('2.71828182845904523536028747135266249775724709369995957496696763')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
